<resources>
    <string name="app_name">Vivid Call</string>
    <string name="noob">Please Enter a Valid Mobile Number</string>
    <string name="title_activity_main">Home</string>
    <string name="title_home">Contacts</string>
    <string name="title_notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="settings_menu">Settings Menu</string>
    <string name="notification_menu">Notification Menu</string>
    <string name="image">Image</string>
    <string name="enter_your_bio_here">Enter your Bio here</string>
    <string name="enter_your_name_here">Enter your Name Here</string>
    <string name="save">Save</string>
    <string name="continuee">Continue</string>
    <string name="contacts">Contacts</string>
    <string name="search_for_friends">Search for friends....</string>
    <string name="user_name">User Name</string>
    <string name="decline">Decline</string>
    <string name="notification">Notification</string>
</resources>
