<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:iconTint="@color/colorAccent"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:iconTint="@color/colorAccent"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_logout"
        android:icon="@drawable/logout"
        android:iconTint="@color/colorAccent"
        android:title="@string/logout"/>

</menu>
