<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundcolor"
    tools:context=".SettingActivity">

   <ImageView
       android:id="@+id/settings_profile_image"
       android:layout_width="250dp"
       android:layout_height="250dp"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_marginTop="50dp"
       android:src="@drawable/profile_image"
       android:contentDescription="@string/image"
       >
       </ImageView>

    <EditText
        android:id="@+id/username_settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings_profile_image"
        android:layout_alignStart="@id/settings_profile_image"
        android:layout_marginTop="19dp"
        android:autofillHints="Enter your Name Here"
        android:backgroundTint="@android:color/holo_red_light"
        android:drawableStart="@drawable/edit_profile"
        android:hint="@string/enter_your_name_here"
        android:textColor="#21D9EF"
        android:inputType="text" />

    <EditText
        android:id="@+id/bio_settings"
        android:textColor="#21D9EF"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_settings"
        android:layout_alignStart="@id/settings_profile_image"
        android:layout_marginTop="19dp"
        android:autofillHints="Enter your Bio Here"
        android:backgroundTint="@android:color/holo_red_light"

        android:drawableStart="@drawable/edit_status"
        android:hint="@string/enter_your_bio_here"
        android:inputType="text" />
    <Button
        android:id="@+id/save_settings_button"
        android:text="@string/save"
        android:background="@drawable/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bio_settings"
        android:layout_alignStart="@id/settings_profile_image"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"/>


</RelativeLayout>



